# arch-test

./: .editorconfig  .gitignore  README.md  pyproject.toml
src/arch_test/core/: dependency.py  dependency_graph.py  dependencyy.py  exceptions.py  library.py  module.py  package.py  package_iterator.py  python_dependency_parser.py
src/arch_test/core/parsers/: dependency.py
tests/: conftest.py
tests/data/test_projects/correct_project/: pyproject.toml
tests/data/test_projects/correct_project/src/example_project/core/services/: complex_service.py  simple_service.py
tests/data/test_projects/correct_project/src/example_project/core/services/implementations/: simple_service.py
tests/data/test_projects/correct_project/src/example_project/core/use_cases/: complex_use_case.py  simple_use_case.py
tests/data/test_projects/correct_project/src/example_project/infra/: rest_framework.py
tests/unit/: _test_dependencyy.py  test_dependency.py  test_dependency_parser.py  test_module.py  test_package_iterator.py
