[tool.isort]
profile = "black"

[tool.poetry]
name = "arch-test"
version = "0.1.0"
description = "Unit tests for architecture"
authors = ["Rafael Augusto de Oliveira <olirafa@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pylama = {extras = ["mypy"], version = "^8.3.8"}
isort = "^5.10.1"
black = "^22.6.0"
commitizen = "^2.29.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
