[tool.isort]
profile = "black"

[tool.poetry]
name = "arch-test"
version = "0.1.0"
description = "Unit tests for architecture"
authors = ["Rafael Augusto de Oliveira <olirafa@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
mypy = "^1.9.0"
isort = "^5.13.2"
black = "^24.3.0"
pytest = "^8.1.1"
commitizen = "^3.21.3"
requests = "^2.31.0"
types-requests = "^2.31.0.20240403"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-vv"

[[tool.mypy.overrides]]
module = "arch_test.*"
ignore_missing_imports = true
